backend for feature: donate blood together
